<resources>
    <string name="app_name">Zust</string>
    <string name="notif_channel" translatable="false">fcm_notif_channel</string>
    <!-- Strings used for fragments for navigation -->

    <string name="label_back">Back Arrow</string>
    <string name="connection_error_title">Network Error</string>
    <string name="connection_error_message">Please check your network connection</string>
    <string name="retry_label">Retry</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="did_not_receive_otp">Didn\'t receive any OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="we_have_sent_otp_to">\"We have sent OTP to \"</string>
    <string name="user_profile">User Profile</string>
    <string name="userName">Username*</string>
    <string name="email_id">Email Id</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="ruppes">₹</string>
    <string name="use_current_location">Use current location</string>
    <string name="fetching_location">Fetching Location...</string>
    <string name="location">Location</string>
    <string name="search_products">Search Products</string>
    <string name="choose_delivery_time">Choose Delivery Time</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="select_a_location">Select a location</string>
    <string name="start_typing_to_search_location">Start typing to search location</string>
    <string name="search_results">Search Results</string>
    <string name="saved_location">Saved location</string>
    <string name="house_no_amp_floor"><![CDATA[House No. & Floor*]]></string>
    <string name="building_amp_block_no"><![CDATA[Building & Block No*]]></string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="landmark_amp_area_name"><![CDATA[Landmark & Area Name*]]></string>
    <string name="my_account">My account</string>
    <string name="warning_secret_code">Please share this code with our Zust partner at the time of delivery</string>
    <string name="search_by_item_names">Search by item names</string>
    <string name="search_item">Search items</string>
    <string name="view">View</string>
    <string name="close">close</string>
    <string name="copy_code">Copy code</string>
    <string name="share">Share</string>
    <string name="share_your_code">Share your code</string>
    <string name="refer_a_friend">Refer A Friend!</string>
    <string name="help_and_support">Help And Support</string>
    <string name="contact_nmber">Contact Number</string>
    <string name="order_history">Order History</string>
    <string name="my_cart">My Cart</string>
    <string name="you_have_saved">You have saved</string>
    <string name="no_result_found">No Result found</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="use_coupons">Use coupons</string>
    <string name="add">ADD</string>
    <string name="trending_items">Trending items</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_price">Total Price</string>
    <string name="special_offers">Special offers</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="delivery_to">Delivery to</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay">Pay</string>
    <string name="remove">Remove</string>
    <string name="press_again_to_exit_app">Press again to exit app</string>
    <string name="view_cart">View Cart</string>
    <string name="product_details">Product Details</string>
    <string name="arrow">arrow</string>
    <string name="common_error_message">Something went wrong. Please try again</string>
    <string name="zust_logo">Zust Logo</string>
    <string name="please_wait">Please wait</string>
    <string name="please_allow_location_permission">Please allow location permission</string>
    <string name="please_retry_current_address">Please Retry current address</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="thanks_for_using_zust_app">Thanks for using Zust app</string>
    <string name="order_confirmation_message">Your order %1$s confirmed.</string>
    <string name="my_profile">My Profile</string>
    <string name="faq">Faq</string>
    <string name="about_us">About us</string>
    <string name="open_source">Open source</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="thanks_for_suggestion">Thanks for suggestion</string>
    <string name="suggest_item">Suggest items</string>
    <string name="dinot_find_what_are_you_looking_for">Did not find what you are looking for? Please suggest the products</string>
    <string name="type_items">Type items...</string>
    <string name="please_wirte_any_address">Please write Any items</string>
    <string name="send">Send</string>
    <string name="copied">Successfully Copied to clipboard</string>
    <string name="key_geo">AIzaSyB8PVG4R7uQ_m4Kh_Ixr_PPkn3Uxv2rQOQ</string>
    <string name="proceed">Proceed</string>
    <string name="search_location_manually">Search location manually...</string>
    <string name="we_don_t_have_your_location_yet">We don\'t have your location, yet!</string>
    <string name="we_need_your_location_to_find_nearest_store_provide_you_a_seamless_delivery_experience"><![CDATA[We need your location to find nearest store & provide you a seamless delivery experience]]></string>
    <string name="enable_device_location">Enable device location</string>
    <string name="last_minute_delivery_app">Your all in one delivery app</string>
    <string name="you_are_selecting_payment_method_cash_on_delivery_cod_if_you_want_to_proceed_please_press_confirm_order" translatable="false">You are selecting payment method Cash On Delivery (COD). If you want to proceed please press <b>Confirm order</b></string>
    <string name="need_help" translatable="false"><u>Need help?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review">Review</string>

    <string name="pg_merchant_stage" translatable="false">PGTESTPAYUAT</string>
    <string name="pg_merchant_prod" translatable="false">M1O8N18KU2RP</string>
    <string name="pg_salt_key" translatable="false">e2a24a0e-bd26-4ab6-b529-ab25eda6bfb5</string>
   <string name="app_id" translatable="false">7VIqIuw45subuvYNsBnGfFzIaVs=</string>

</resources>